--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   ],
   "dependencies": {
     "prosemirror-keymap": "^1.2.2",
+    "prosemirror-markdown": "^1.13.1",
     "prosemirror-model": "^1.24.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-transform": "^1.10.2",
