--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dist"
   ],
   "dependencies": {
+    "prosemirror-history": "^1.4.1",
     "prosemirror-keymap": "^1.2.2",
     "prosemirror-markdown": "^1.13.1",
     "prosemirror-model": "^1.24.1",
